<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_available_date">Please try to search movies.</string>
    <string name="price_label">Price:\u0020</string>
    <string name="movie_artist_label">Artist :\u0020</string>
    <string name="movie_genre_label">Genre :\u0020</string>
    <string name="movie_genre">Genre: %1s</string>
    <string name="movie_price_label">Price :\u0020</string>
    <string name="movie_price">%1s %2s</string>
    <string name="movie_release_label">Release Date :\u0020</string>
    <string name="movie_length_label">Length :\u0020</string>
    <string name="sypnosis_label">Sypnosis :\u0020</string>
</resources>