<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailsViewModel"
            type="com.enaz.movies.ui.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_highlight_default"
        android:paddingLeft="@dimen/padding_16"
        android:paddingTop="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/transparent_66"
                app:actualImageScaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderImage="@drawable/image_place_holder"
                app:progressBarImage="@drawable/progress_animation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_name_details"
                style="@style/Font.Large.Black.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@{detailsViewModel.movieItem.trackName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_artist_details_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/movie_artist_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_artist_details"
                style="@style/Font.Small.PrimaryDark.Bold"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@{detailsViewModel.movieItem.artistName}"
                app:layout_constraintStart_toEndOf="@+id/movie_artist_details_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_name_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_primary_genre_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/movie_genre_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_artist_details" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_primary_genre"
                style="@style/Font.Small.PrimaryDark.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@{detailsViewModel.movieItem.primaryGenreName}"
                app:layout_constraintStart_toEndOf="@+id/movie_primary_genre_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_artist_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_price_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/movie_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_primary_genre" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_price"
                style="@style/Font.Small.Red.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@{String.format(@string/movie_price, detailsViewModel.movieItem.trackPrice.toString(), detailsViewModel.movieItem.currency.toString())}"
                app:layout_constraintStart_toEndOf="@+id/movie_price_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_primary_genre" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_release_date_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/movie_release_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_release_date"
                style="@style/Font.Small.PrimaryDark.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@{detailsViewModel.releaseDate()}"
                app:layout_constraintStart_toEndOf="@+id/movie_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_time_length_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/movie_length_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_time_length"
                style="@style/Font.Small.PrimaryDark.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@{detailsViewModel.trackTime()}"
                app:layout_constraintStart_toEndOf="@+id/movie_time_length_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_sypnosis_label"
                style="@style/Font.Small.Black.Bold"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/sypnosis_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_time_length" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_description"
                style="@style/Font.Small.Black"
                android:layout_width="@dimen/layout_width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:paddingBottom="@dimen/padding_16"
                android:text="@{detailsViewModel.movieItem.longDescription}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_sypnosis_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
